--- a/style.css
+++ b/style.css
@@ -504,8 +504,91 @@ span{
     background: rgba(0,0,0,0.8);
 }
 
+.contact{
+    min-height: auto;
+    padding-bottom: 7rem;
+}
 
+.contact form{
+    max-width: 70rem;
+    text-align: center;
+    text-align: center;
+    margin-bottom: 3rem;
+}
 
+.input-box{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
+}
+
+.contact h2{
+    margin-bottom: 3rem;
+}
+
+.input-box input, textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background: var(--bg-color);
+    border-radius: .8rem;
+    margin: .7rem 0;
+    box-shadow: 0 .1rem .5rem var(--shadow-color);
+
+}
+
+.input-box input{
+    width: 49%;
+
+}
+textarea{
+    resize: none;
+}
+
+.contact form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 7%;
+    background: var(--main-color);
+
+}
+
+.footer-text p{
+    font-size: 1.6rem;
+    color: var(--white-color);
+
+}
+
+.footer-icoTop a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--white-color);
+    border-radius: .8rem;
+    border: .2rem solid var(--main-color);
+    outline: .2rem solid transparent;
+    transition: .5s ease;
+}
+
+.footer-icoTop a:hover{
+    outline-color: var(--white-color);
+
+}
+
+.footer-icoTop i{
+    font-size: 2.4rem;
+    color: #333;
+}
 
 
