--- a/style.css
+++ b/style.css
@@ -591,4 +591,82 @@ textarea{
     color: #333;
 }
 
+/* Break point */
 
+@media(max-width:1200px){
+    html{
+        font-size: 55%;
+    }
+
+    .home .profession-container .profession-box{
+        right: -10%;
+    }
+    .home-img img{
+        right: 0;
+    }
+}
+
+@media(max-width:1100px){
+    .home .profession-container .profession-box{
+        right: -15%;
+    }
+    .home-img img{
+        max-width: 420px;
+    }
+}
+
+@media(max-width:1024px){
+    .header{
+        padding-top: 2rem 3%;
+    }
+
+    section{
+        padding: 10rem 3% 2rem;
+    }
+    .home .profession-container .pro{
+        right: -20%;
+    }
+
+    .home .profession-container .overlay{
+        right: -12%;
+
+    }
+    .home-img img{
+        max-width: 400px;
+    }
+}
+
+@media(max-width:991px){
+    .navbar a:nth-child(1){
+        color: var(--main-color);
+    }
+    .navbar a.active::before{
+        background: var(--main-color);
+        opacity: .7;
+    }
+
+    .home .home-content{
+        max-width: 50rem;
+    }
+    .home .profession-container .profession-box{
+        right: -35%;
+    }
+    .home .profession-container .overlay{
+        right: -38%;
+    }
+    .home-img img{
+        display: none;
+    }
+
+
+}
+
+@media(max-width:896px){
+    .navbar a:nth-child(2){
+        color: var(--main-color);
+    }
+
+    .home .profession-container .profession-box{
+        right: -50%;
+    }
+}
