--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     --text-color: #333;
     --main-color: #754af9;
     --white-color: #fdfdfd;
-    --shado-color: rgba(0,0,0,0.2);
+    --shadow-color: rgba(0,0,0,0.2);
 }
 
 *::selection{
@@ -43,11 +43,11 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100px;
+    width: 100%;
     padding: 2rem 7%;
     background: transparent;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     z-index: 100;
     transition: .5s;
@@ -57,18 +57,24 @@ body{
     display: flex;
     justify-content: flex-end;
 } */
-.header.sticky{
+.header .sticky{
+    background: var(--bg-color);
+    box-sizing: 0 .1rem 1rem var(--shadow-color);
+
+}
+
+.logo{
     font-size: 2.5rem;
     color: var(--main-color);
     font-weight: 600;
     margin-right: auto;
-
 }
+
 .navbar a{
     position: relative;
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     font-size: 1.7rem;
     color: var(--white-color);
     font-weight: 500;
@@ -87,7 +93,7 @@ body{
     width: 100%;
     height: .2rem;
     background: var(--white-color);
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
 }
 
 #darkmode-icon{
@@ -134,7 +140,7 @@ section{
     background-color: transparent;
     border: .2rem solid var(--main-color);
     border-radius: 50%;
-    box-shadow: 0 .2rem .5rem var(--shado-color);
+    box-shadow: 0 .2rem .5rem var(--shadow-color);
     font-size: 2rem;
     color: var(--main-color);
     margin: 2.5rem 1.5rem 3rem 0;
@@ -150,6 +156,8 @@ section{
     padding: 1.2rem 2.8rem;
     background-color: var(--main-color);
     border-radius: .6rem;
+    box-shadow: 0 .2rem .5rem var(--shadow-color);
+    font-size: 1.6rem;
     color: var(--white-color);
     letter-spacing: .2rem;
     font-weight: 600;
@@ -177,7 +185,7 @@ section{
     position: absolute;
     top: 0;
     right: 0;
-    width: 760px;
+    width: 768px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -194,6 +202,9 @@ section{
         transform: rotate(-90deg);
     }
     50%, 70% {
+        transform: rotate(-180deg);
+    }
+    75%, 95% {
         transform: rotate(-270deg);
     }
     100% {
@@ -250,6 +261,7 @@ section{
     height: 0;
     border-top: 50vh solid var(--main-color);
     border-right: 384px solid var(--main-color);
+    border-bottom: 50vh solid var(--main-color);
     border-left: 384px solid transparent;
 }
 
@@ -284,7 +296,7 @@ span{
 
 .about-content h2{
     text-align: left;
-    line-height: 1.2rem;
+    line-height: 1.2;
 }
 
 
@@ -341,7 +353,7 @@ span{
     transition: .5s ease;
 }
 
-.services-box:hover{
+.services-box:hover h3{
     color: var(--main-color);
 }
 
@@ -363,7 +375,7 @@ span{
 
 .portfolio-container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3,1fr);
     align-items: center;
     gap: 2.5rem;
 }
@@ -417,7 +429,7 @@ span{
 }
 
 .portfolio-layer a{
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     width: 5rem;
@@ -432,7 +444,7 @@ span{
     color: #333;
 }
 
-.testimonial-container{
+.tastimonial-container{
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -561,6 +573,11 @@ textarea{
     padding: 2rem 7%;
     background: var(--main-color);
 
+}
+.footer-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footer-text p{
