--- a/style.css
+++ b/style.css
@@ -523,14 +523,14 @@ span{
 
 .contact form{
     max-width: 70rem;
-    text-align: center;
+    margin: 1rem auto;
     text-align: center;
     margin-bottom: 3rem;
 }
 
 .input-box{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 
 }
@@ -565,7 +565,7 @@ textarea{
 
 }
 
-.footer{
+.footter{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -618,6 +618,9 @@ textarea{
     .home .profession-container .profession-box{
         right: -10%;
     }
+    .home .profession-container .overlay{
+        right: -6%;
+    }
     .home-img img{
         right: 0;
     }
@@ -634,13 +637,13 @@ textarea{
 
 @media(max-width:1024px){
     .header{
-        padding-top: 2rem 3%;
+        padding: 2rem 3%;
     }
 
     section{
         padding: 10rem 3% 2rem;
     }
-    .home .profession-container .pro{
+    .home .profession-container .profession-box{
         right: -20%;
     }
 
