--- a/style.css
+++ b/style.css
@@ -53,10 +53,7 @@ body{
     transition: .5s;
 
 }
-/* .navbar{
-    display: flex;
-    justify-content: flex-end;
-} */
+
 .header .sticky{
     background: var(--bg-color);
     box-sizing: 0 .1rem 1rem var(--shadow-color);
@@ -98,7 +95,8 @@ body{
 
 #darkmode-icon{
     font-size: 2.4rem;
-    color: var(--white-color);
+    color: var(--text-color);
+    font-weight: 600;
     cursor: pointer;
 
 }
@@ -586,10 +584,12 @@ textarea{
 
 }
 
-.footer-icoTop a{
+
+.footer-iconTop a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    z-index: -5;
     padding: .8rem;
     background: var(--white-color);
     border-radius: .8rem;
@@ -598,12 +598,12 @@ textarea{
     transition: .5s ease;
 }
 
-.footer-icoTop a:hover{
+.footer-iconTop a:hover{
     outline-color: var(--white-color);
 
 }
 
-.footer-icoTop i{
+.footer-iconTop i{
     font-size: 2.4rem;
     color: #333;
 }
@@ -715,11 +715,12 @@ textarea{
     .navbar{
         position: absolute;
         top: 100%;
+        left: 0;
         width: 100%;
         padding: 1rem 3%;
         background: var(--bg-color);
         border-top: .1rem solid rgba(0, 0, 0, 0.2);
-        box-shadow: 0 .5rem rgba(0,0,0,0.1);
+        box-shadow: 0 .5rem 1rem rgba(0,0,0,0.1);
         display: none;
         
     }
@@ -756,7 +757,7 @@ textarea{
     }
 
     .home-content h3{
-        font-size: 5rem;
+        font-size: 2.6rem;
     }
 
     .home-content h1{
@@ -842,6 +843,9 @@ textarea{
     .testimonial-container .testimonial-wrapper{
         padding: 5rem 0;
     }
+    .testimonial-container .testimonial-slide{
+        padding: 3rem 2rem;
+    }
 
     .swiper-button-next, .swiper-button-prev{
         display: none;
@@ -852,7 +856,14 @@ textarea{
 }
 
 @media(max-width:580px){
-    
+    .portfolio .portfolio-container{
+        grid-template-columns: 1fr;
+    }
 }
 
+@media(max-width:45px){
+    html{
+        font-size: 50%;
+    }
+}
 
