--- a/Project2/style.css
+++ b/Project2/style.css
@@ -27,6 +27,24 @@ html, body{
     position: relative;
 }
 
+#cursor{
+    height: 7.5vw;
+    width: 7.5vw;
+    background-color: #FF5F38;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+    
+}
+
+#curson h5{
+    font-size: 1.2vw;
+    font-weight: 500;
+}
 #page1 video{
     height: 100%;
     width: 100%;
@@ -38,7 +56,7 @@ html, body{
     height: 100%;
     width: 100%;
     position: relative;
-    z-index: 2;
+    z-index: 10;
     color: white;
     display: flex;
     align-items: center;
@@ -70,4 +88,10 @@ nav h4{
 }
 #page1-content h1 span{
    font-family: rejoy;
+}
+
+#page2{
+    height: 100vh;
+    width: 100%;
+    background-color: beige;
 }
