--- a/Project3/style.css
+++ b/Project3/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 .head{
@@ -19,6 +20,7 @@
     height: 300px;
     width: 300px;
     margin: 40px;
+    border-radius: 10px;
 }
 
 .mid-section{
@@ -27,6 +29,34 @@
 }
 .mid-section button{
     margin-top: 50px;
+}
+.mid-section button{
+    padding: 10px;
+    background-color: skyblue;
+    color: white;
+    font-weight: 600;
+    font-size: 20px;
+    border-radius: 10px;
+    border-color: blue;
+}
+
+.mid-section button:hover{
+    background-color: greenyellow;
+    border-color: red;
+}
+
+.mid-section a{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+    margin-top: 140px;
+    color: #0cbd79;
+}
+.mid-section a:hover{
+    color: green;
+
 }
 
 .right-section{
@@ -39,5 +69,46 @@
     height: 300px;
     width: 300px;
     margin: 40px;
+    border-radius: 10px;
 }
+
+.navigation-head{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+
+}
+.nav-head{
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.nav-child{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    font-size: 20px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.nav-child li:hover{
+    color: red;
+}
+
+.nav-login{
+    font-size: 20px;
+    padding: 10px 50px;
+    cursor: pointer;
+    background-color: aquamarine;
+    border-radius: 10px;
+    border-color: black;
+
+}
+.nav-login:hover{
+    background-color: cornflowerblue;
+    color: white;
+}
+
 
