--- a/Project2/style.css
+++ b/Project2/style.css
@@ -184,9 +184,20 @@ nav h4{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background-color: rgb(42, 40, 40);
 }
 
 #page4 video{
     height: 100%;
+}
+
+#page4 svg{
+    position: absolute;
+    height: 60%;
+}
+#page5{
+    height: 100vh;
+    width: 100%;
+    padding: 4vw 0;
+    position: relative;
 }
