--- a/Project2/style.css
+++ b/Project2/style.css
@@ -184,7 +184,7 @@ nav h4{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(42, 40, 40);
+    background-color: white;
 }
 
 #page4 video{
@@ -201,3 +201,44 @@ nav h4{
     padding: 4vw 0;
     position: relative;
 }
+
+#page5 h1{
+    font-size: 10vw;
+    font-family: rejoy;
+    font-weight: 100;
+    border-bottom: 1px solid black;
+    width: 96%;
+    margin-left: 2%;
+}
+#swiper{
+    height: 60vh;
+    width: 100%;
+    position: relative;
+    margin-top: -2%;
+}
+
+.swiper {
+    width: 130%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+  }
+
+  .swiper-slide img {
+    /* display: block; */
+    width: 19%;
+
+    object-fit: cover;
+  }
+
+  #loader{
+    height: ;
+  }
+ 
