--- a/Sundown/style.css
+++ b/Sundown/style.css
@@ -98,6 +98,7 @@ nav{
     line-height: 8vw;
 }
 #page1 video{
+    z-index: 99;
     position: relative;
     border-radius: 30px;
     margin-top: 4vw;
@@ -166,4 +167,45 @@ nav{
     to {
         transform: translate(-20%, 30%);
     }
+}
+
+#page2{
+    min-height: 100vh;
+    width: 100%;
+    padding: 8vw 0;
+}
+#moving-text{
+    overflow-x: auto;
+    white-space: nowrap;
+}
+#moving-text::-webkit-scrollbar{
+    display: none;
+}
+.con{
+    white-space: nowrap;
+    display: inline-block;
+    animation-name: move;
+    animation-duration: 10s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+#moving-text h1{
+    font-size: 9vw;
+    display: inline-block;
+}
+#gola{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: #FE320A;
+    display: inline-block;
+    margin: 1vw 2vw;
+}
+@keyframes move {
+    from{
+        transform: translateX(0);
+    }
+     to{
+            transform: translateX(-100%);
+        }
 }
