--- a/Sundown/style.css
+++ b/Sundown/style.css
@@ -2,6 +2,16 @@
     font-family: neu;
     src: url("./neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayMediu.ttf");
 }
+@font-face {
+    font-family: neu;
+    font-weight: 100;
+    src: url("./neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayLight.ttf");
+}
+@font-face {
+    font-family: neu;
+    font-weight: 200;
+    src: url("./neue-haas-grotesk-display-pro-cufonfonts/NeueHaasDisplayLightItalic.ttf");
+}
 
 *{
     margin: 0;
@@ -173,6 +183,7 @@ nav{
     min-height: 100vh;
     width: 100%;
     padding: 8vw 0;
+    position: relative;
 }
 #moving-text{
     overflow-x: auto;
@@ -208,4 +219,61 @@ nav{
      to{
             transform: translateX(-100%);
         }
+}
+#page2-bottom{
+    height: 80vh;
+    width: 100%;
+    padding: 4.5vw; 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    z-index: 9;
+}
+#page2-bottom h1{
+    font-size: 4vw;
+    width: 60%;
+    line-height: 4vw;
+
+}
+#bottom-part2{
+    width: 20%;
+}
+#bottom-part2 img{
+    width: 100%;
+    border-radius: 15px;
+}
+#bottom-part2 p{
+    font-weight: 200;
+    margin-top: 2vw;
+    font-size: 1vw;
+}
+#page2 #gooey{
+    height: 30vw;
+    width: 30vw;
+    position: absolute;
+    border-radius: 50%;
+    background: linear-gradient(to top right,#e24425, #de3412);
+    top: 58%;
+    left: 25%;
+    filter: blur(20px);
+    animation-name: gooey;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-in-out;
+}
+@keyframes gooey{
+    from{
+        filter: blur(20px);
+        transform: translate(10%,-10%) skew(-12deg);
+    }
+    to{
+        filter: blur(30px);
+        transform: translate(-10%,10%);
+    }
+}
+#page3{
+    height: 100vh;
+    width: 100%;
 }
