--- a/modernLandingPage/style.css
+++ b/modernLandingPage/style.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: kajiro;
+    src: url(./fonts/Kajiro\ Bold.ttf);
+}
 *{
     margin: 0;
     padding: 0;
+    font-family: "gilroy";
     box-sizing: border-box;
 }
 
@@ -18,6 +23,7 @@ html, body{
     height: 100vh;
 }
 #top{
+    pointer-events: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -26,10 +32,12 @@ html, body{
     background-color: black;
 }
 #workingarea{
+    position: relative;
     margin: 0 auto;
     width: 80%;
     height: 100vh;
     max-width: 1920px;
+    
 }
 #nav{
     display: flex;
@@ -53,5 +61,63 @@ html, body{
     font-weight: 700;
     letter-spacing: 1px;
     color: #fff;
-    font-family: "gilroy";
+    
+}
+#hero {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0%,-20%);
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+   
+}
+
+#heroleft{
+    min-width: 50%;
+}
+#heroleft .elem{
+    height: 9vw;
+    overflow: hidden;
+    
+}
+#heroleft .elem h1{
+    line-height: .9;
+    font-family: 'kajiro';
+    color: white;
+    font-weight: 100;
+    font-size: 11vw;
+}
+#heroleft button{
+    padding: .8vw 2vw;
+    font-size: 3vw;
+    margin-top: 2vw;
+    font-family: 'kajiro';
+}
+#heroright{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 17%;
+    color: white;
+    /* background-color: green; */
+}
+#heroright p{
+    font-size: 14;
+    font-weight: 300;
+    text-align: right;
+}
+#heroright #imagediv{
+    width: 100%;
+    height: 170px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    background-image: url('https://images.pexels.com/photos/5477855/pexels-photo-5477855.jpeg?auto=compress&cs=tinysrgb&w=600');
+    background-size: cover;
+    background-position: center;
+}
+
+#heroright p:nth-child(3){
+    color: red;
 }
