--- a/cubertoClone/style.css
+++ b/cubertoClone/style.css
@@ -40,7 +40,7 @@ html, body{
 #hero {
     height: 100%;
     width: 100%;
-    padding: 30px 50px;
+    padding: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,11 +56,50 @@ html, body{
 #hero-section video{
     height: 90px;
     width: 200px;
-    border-radius: 80%;
+    border-radius: 50%;
 }
 #hero-section .video{
     display: flex;
+    border: none;
 }
 #hero-section p {
     font-size: 100px;
+}
+#page3{
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+#page3 video{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+
+}
+#page4{
+    height: 100%;
+    width: 100%;
+
+}
+#page4-section{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 100px;
+}
+#page4-left video{
+    height: 400px;
+}
+#page4-right p{
+    font-size: 40px;
+}
+#page4-right button{
+    padding: 60px 100px;
+    margin-top: 20px;
+    border: 1px solid black;
+    background: none;
+    font-size: 30px;
+    color: gray;
+    border-radius: 80px;
+    position: relative;
 }
