--- a/locomotive/style.css
+++ b/locomotive/style.css
@@ -50,9 +50,13 @@ html, body{
     align-items: center;
 }
 #page5 h1{
-    color: white;
+    color: black;
+    background-color: white;
+    width: 100%;
     font-size: 5rem;
     font-weight: 800;
+    rotate: 30deg;
+    padding: 2px 5px 5px ;
 }
 #page6{
     height: 100vh;
