--- a/SuperWeb/style.css
+++ b/SuperWeb/style.css
@@ -87,7 +87,9 @@ body {
 #page2 {
   height: 100vh;
   width: 100%;
-  /* background-color: black; */
+  background-color: black;
+  background-size: cover;
+  background-position: center;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -170,7 +172,86 @@ body {
 
 
 #page3 {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: white;
+}
+.img-container{
+  padding: 30px;
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+
+
+}
+
+.image-div{
+  height: 40vw;
+  width: 30vw;
+  background-color: red;
+  position: relative;
+  overflow: hidden;
+  margin: 30px 10px;
+}
+.image-div img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: all ease 0.5s;
+}
+
+.overlay{
+  height: 100%;
+  width: 100%;
+  background-color: #0000001d;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  transition: all ease 0.5s;
+  z-index: 9;
+
+}
+
+.overlay p{
+  font-size: 2.5vw;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  line-height: 2.5vw;
+  transition: all ease 0.5s;
+  transition-delay: 0.2s;
+  opacity: 0;
+}
+.image-div:hover .overlay{
+  background-color: #000;
+}
+.image-div:hover .overlay p{
+  opacity: 1;
+}
+.image-div:hover img{
+  scale: 1.1;
+}
+
+#footer{
+  height: 40vh;
+  width: 100%;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  gap: 40px;
+}
+#footer #foot{
+  height: 50%;
+  width: 100%;
+  background-color: #000;
+}
+#footer h2{
+  font-family: forBig;
+  text-transform: uppercase;
+  font-size: 1vw;
+  cursor: pointer;
 }
